@@ -73,7 +73,16 @@ class DroppedSpanStats {
   }
 
   encode () {
-    return Array.from(this.statsMap.values())
+    // `duration.sum.us` is an integer in the intake API, but is stored as
+    // a float. We assume this `.encode()` is typically only called when the
+    // transaction is ended, so the in-place loss of the fractional value is
+    // acceptable.
+    const result = []
+    for (const stats of this.statsMap.values()) {
+      stats.duration.sum.us = Math.round(stats.duration.sum.us)
+      result.push(stats)
+    }
+    return result
   }
 
   size () {
